visualization/graph.css
body{
  margin:0;
  padding:20px;
  font:12px/17px Arial, sans-serif;
  background:#f9f9f9;
}

#visualization{
	display: inline-block;
	width: 1100px;
	margin-top:20px;
}

#nodelabel{
	background-color: #4188d2;
	margin: 20px;
	z-index: 10;
	position: absolute;
	right: 10px;
	bottom: 0px;
	width: 300px;
	height: 30px;
	padding: 5px;
	color: white;
	font-weight: bold;
	text-align: center;
}

#viewport{
	background-color: black;
}

#instructions{
	color: white;
	z-index: 10;
	position:absolute;
	text-align: center;
	right: 10px;
	bottom: 40px;
	width: 300px;
	margin: 20px;
	padding: 5px;
}

